change login and signup

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,5 @@
 {% extends 'base_accounts.html' %}
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% block title %}Sign up to Mohit Boards{% endblock %}
 
 {% block content %}
