--- a/templates/new_topic.html
+++ b/templates/new_topic.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% block title %}Start a New Topic{% endblock %}
 
 {% block breadcrumb %}
