--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,7 @@
 {% extends 'base_accounts.html' %}
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% block head %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% endblock %}
 {% block title %}Log in to Django Boards{% endblock %}
 
 {% block content %}
