added block meta to base_accounts

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,5 @@
 {% extends 'base_accounts.html' %}
-  {% block head %}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  {% endblock %}
-{% block title %}Log in to Django Boards{% endblock %}
+{% block title %}Log in to Mohit Boards{% endblock %}
 
 {% block content %}
   <div class="row justify-content-center">
