--- a/templates/base_accounts.html
+++ b/templates/base_accounts.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block meta%}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% endblock%}
+
 {% block stylesheet %}
   <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
 {% endblock %}
