--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}<!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>{% block title %}Mohit Boards{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
@@ -10,50 +11,62 @@
   </head>
   <body>
     {% block body %}
-
-      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="{% url 'home' %}">Mohit Boards</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="mainMenu">
-            {% if user.is_authenticated %}
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{ user.username }}
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                    <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
-                    <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
-                  </div>
+      <div class="wrapper">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+          <div class="container">
+            <a class="navbar-brand" href="{% url 'home' %}">Mohit Boards</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainMenu">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'home' %}">Boards</a>
                 </li>
+                <!-- <li class="nav-item">
+                  <a class="nav-link" href="https://github.com/sibtc/django-beginners-guide" target="_blank" rel="noopener">GitHub</a>
+                </li> -->
               </ul>
-            {% else %}
-              <form class="form-inline ml-auto">
-                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
-              </form>
-            {% endif %}
+              {% if user.is_authenticated %}
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      {{ user.username }}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                      <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
+                      <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                    </div>
+                  </li>
+                </ul>
+              {% else %}
+                <form class="form-inline ml-auto">
+                  <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                  <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                </form>
+              {% endif %}
+            </div>
           </div>
-        </div>
-      </nav>
-
-      <div class="container">
-        <ol class="breadcrumb my-4">
-          {% block breadcrumb %}
+        </nav>
+        <div class="container">
+          <ol class="breadcrumb my-4">
+            {% block breadcrumb %}
+            {% endblock %}
+          </ol>
+          {% block content %}
           {% endblock %}
-        </ol>
-        {% block content %}
-        {% endblock %}
+        </div>
+        <div class="push"></div>
       </div>
+      
     {% endblock body %}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% block javascript %}{% endblock %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-42049022-13"></script>
+    <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-42049022-13');</script>
   </body>
 </html>
