--- a/static/css/accounts.css
+++ b/static/css/accounts.css
@@ -1,6 +1,5 @@
 body {
-    /* background-image: url(../img/color.png); */
-    background-color: aqua;
+    background-image: url(../img/color.png);
   }
   
   .logo {
