--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'home' %}">Boards</a>
                 </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link" href="https://github.com/sibtc/django-beginners-guide" target="_blank" rel="noopener">GitHub</a>
-                </li> -->
+                <li class="nav-item">
+                  <a class="nav-link" href="https://github.com/Mohitb07/mohitboard" target="_blank" rel="noopener">GitHub</a>
+                </li>
               </ul>
               {% if user.is_authenticated %}
                 <ul class="navbar-nav ml-auto">
