--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                 </ul>
               {% else %}
                 <form class="form-inline ml-auto">
-                  <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                  <a href="{% url 'login' %}" class="btn btn-outline-warning">Log in</a>
                   <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
                 </form>
               {% endif %}
@@ -55,8 +55,15 @@
             {% block breadcrumb %}
             {% endblock %}
           </ol>
+          {% if user.is_authenticated %}
           {% block content %}
           {% endblock %}
+          {% else %}
+          <div class="container-fluid jumbotron">
+            <p class="lead">Please Login first to view the latest post 😊</p>
+          </div>
+          {% endif %}
+
         </div>
         <div class="push"></div>
       </div>
