--- a/templates/topic_posts.html
+++ b/templates/topic_posts.html
@@ -40,7 +40,7 @@
             {% if post.created_by == user %}
               <div class="mt-3">
                 <a href="{% url 'edit_post' post.topic.board.pk post.topic.pk post.pk %}"
-                   class="btn btn-primary btn-sm"
+                   class="btn btn-warning btn-sm"
                    role="button">Edit</a>
               </div>
             {% endif %}
