--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,12 @@
         </div>
         <div class="push"></div>
       </div>
+
+      <footer class="text-muted">
+        <div class="container text-center">
+          <p>&COPY; Mohit Bisht {% now "Y" %}</p>
+        </div>
+      </footer>
       
     {% endblock body %}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
