--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<a class="btn btn-outline-primary mb-2" href="{% url 'board_form' %}">Create</a>
   <table class="table">
     <thead class="thead-inverse">
       <tr>
