--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>{% block title %}Mohit Boards{% endblock %}</title>
+    <link rel="shortcut icon" href="{% static 'img/title.ico' %}" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
@@ -31,7 +32,7 @@
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      {{ user.username }}
+                     <span><img src="{% static 'img/new-user2.png' %}" alt=""/></span> {{ user.username }}
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                       <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
