--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Create New Board{% endblock %}
 {% block content %}
-<form method="POST">
+<h2>Create New Discussion</h2>
+<form method="POST" autocomplete="off">
     {% csrf_token %}
     {% include 'includes/form.html' %}
     <!-- {{form.as_p}} -->
