--- a/templates/new_topic.html
+++ b/templates/new_topic.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block content %}
+  <h2>Create New Topic</h2>
   <form method="post" novalidate>
     {% csrf_token %}
     {% include 'includes/form.html' %}
