--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <script data-ad-client="ca-pub-3946282744492638" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>{% block title %}Mohit Boards{% endblock %}</title>
     <link rel="shortcut icon" href="{% static 'img/title.ico' %}" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
