changes btn font

--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -6,6 +6,6 @@
     {% csrf_token %}
     {% include 'includes/form.html' %}
     <!-- {{form.as_p}} -->
-    <input class="btn btn-outline-info" type="submit" value="Create">
+    <input class="btn btn-success" type="submit" value="Create">
 </form>
 {% endblock content %}
