--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <script data-ad-client="ca-pub-3946282744492638" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>{% block title %}Mohit Boards{% endblock %}</title>
-    <link rel="shortcut icon" href="{% static 'img/title.ico' %}" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
+    <link rel="shortcut icon" href="{% static 'img/title1.ico' %}" type="image/x-icon" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
     {% block stylesheet %}{% endblock %}
@@ -16,7 +17,7 @@
       <div class="wrapper">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
           <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">Mohit Boards</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Mohit Boards</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,7 +34,7 @@
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     <span><img src="{% static 'img/new-user2.png' %}" alt=""/></span> {{ user.username }}
+                     <span><img src="{% static 'img/new-user2.png' %}" alt="profile"/></span> {{ user.username }}
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                       <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
@@ -62,7 +63,7 @@
           {% endblock %}
           {% else %}
           <div class="container-fluid jumbotron">
-            <p class="lead">Please Login first to view the latest post 😊</p>
+            <p class="lead mypara">Please Login first to view the latest post 😊</p>
           </div>
           {% endif %}
 
