--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,6 +2,7 @@
 {% block title %}Sign up to Mohit Boards{% endblock %}
 
 {% block content %}
+<div class="signup">
   <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
       <div class="card">
@@ -19,4 +20,5 @@
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
