--- a/templates/base.html
+++ b/templates/base.html
@@ -6,18 +6,18 @@
     <script data-ad-client="ca-pub-3946282744492638" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>{% block title %}Mohit Boards{% endblock %}</title>
     <link rel="shortcut icon" href="{% static 'img/title1.ico' %}" type="image/x-icon" />
-    <!-- <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base-nav.css' %}">
     {% block stylesheet %}{% endblock %}
   </head>
   <body>
     {% block body %}
       <div class="wrapper">
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark custom-nav">
           <div class="container">
-            <a class="navbar-brand" href="{% url 'index' %}">Mohit Boards</a>
+            <a class="navbar-brand" href="">Mohit Boards</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,7 +34,7 @@
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     <span><img src="{% static 'img/new-user2.png' %}" alt="profile"/></span> {{ user.username }}
+                     <span><ion-icon class="icon-ion" name="person-circle-outline" size="large"></ion-icon></span> {{ user.username }}
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                       <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
@@ -46,8 +46,8 @@
                 </ul>
               {% else %}
                 <form class="form-inline ml-auto">
-                  <a href="{% url 'login' %}" class="btn btn-outline-warning">Log in</a>
-                  <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                  <a href="{% url 'login' %}" class="btn btn-outline-success mt-2">Log in</a>
+                  <a href="{% url 'signup' %}" class="btn btn-primary ml-2 mt-2">Sign up</a>
                 </form>
               {% endif %}
             </div>
@@ -68,19 +68,35 @@
           {% endif %}
 
         </div>
-        <div class="push"></div>
       </div>
 
-      <footer class="text-muted">
-        <div class="container text-center">
-          <p>&COPY; Mohit Bisht {% now "Y" %}</p>
+
+
+
+      <footer>
+        <div class="social container">
+          <a href="https://www.facebook.com/mohit.bisht.1903" target="_blank"><ion-icon name="logo-facebook" class="pr-2"></ion-icon></a>
+          <a target="_blank" href="https://www.github.com/Mohitb07"><ion-icon name="logo-github" class="pr-2"></ion-icon></a>
+          <a target="_blank" href="https://www.instagram.com/mohitbisht1903"><ion-icon name="logo-instagram" class="pr-2"></ion-icon></a>
+          <a target="_blank" href="https://www.linkedin.com/in/mohit-bisht-b602511b3/"><ion-icon name="logo-linkedin" class="pr-2"></ion-icon></a>
+          <a href="https://www.twitter.com/Mohitb07" target="_blank"><ion-icon name="logo-twitter" class="pr-2"></ion-icon></a>
         </div>
-      </footer>
+        <div class="footer-menu text-center container">
+            <a href="">About</a>
+            <a href="">Contact</a>
+            <a href="">Terms & Services</a>
+            <a href="">Help us</a>
+        </div>
+        <div class="copyright">
+          <p class="text-center">&copy; Mohit Bisht {% now "Y" %}</p>
+        </div>
+    </footer>
       
     {% endblock body %}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     {% block javascript %}{% endblock %}
   </body>
 </html>
