--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
   </head>
   <body>
     {% block body %}
-      <div class="wrapper">
+      <div class="wrapper my-container">
+        <div class="main">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark custom-nav">
           <div class="container">
             <a class="navbar-brand" href="">Mohit Boards</a>
@@ -69,7 +70,7 @@
 
         </div>
       </div>
-
+    </div>
 
 
 
