--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,11 +1,24 @@
+html,body{
+    height: 100%;
+}
+
+.my-container {
+    min-height: 100%;
+}
+
+.main{
+    overflow: auto;
+    padding-bottom: 100px;
+}
+
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 12%;
+    position: relative;
+    margin-top: -100px;
+    /* width: 100%; */
+    height: 100px;
     background-color:rgba(0, 0, 0, .8);
     color: white;
+    clear: both;
 }
 
 footer .social {
@@ -38,6 +51,9 @@ footer .social a {
         font-size: 80%;
         justify-content: center;
     }
+    footer {
+        z-index: -1;
+    }
 
 }
 
@@ -46,6 +62,9 @@ footer .social a {
         display: flex;
         font-size: 80%;
         justify-content: center;
+    }
+    footer {
+        z-index: -1;
     }
 }
 
@@ -61,6 +80,9 @@ and (max-device-width : 480px) {
     footer .social a {
         font-size: 90%;
     }
+    footer {
+        z-index: -1;
+    }
 }
 
 @media only screen 
@@ -73,5 +95,8 @@ and (max-width : 767px) {
     }
     footer .social a {
         font-size: 90%;
+    }
+    footer {
+        z-index: -1;
     }
 }
