footer bottom  responsive

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -14,7 +14,6 @@ html,body{
 footer {
     position: relative;
     margin-top: -100px;
-    /* width: 100%; */
     height: 100px;
     background-color:rgba(0, 0, 0, .8);
     color: white;
@@ -45,6 +44,24 @@ footer .social a {
     margin-top: 6px;
 }
 
+@media (min-width: 1281px) {
+    footer {
+       height: 130px;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {    
+    footer {
+        height: 140px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    footer {
+        height: 150px;
+    }
+  
+  }
 @media only screen and (max-width:600px){
     .footer-menu {
         display: flex;
