Changes homepage para

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,7 +30,7 @@
     <header class="heading">
         <h1>Welcome to Mohit Boards</h1>
     </header>
-    <div id="content" class="para">A place where users can discuss about various topics of their choices.</div>
+    <div id="content" class="para">It is a platform where a writer or a group of writers share their views on an individual subject.</div>
     <a href="#section" class="btn extra">Let's go</a>
     </div>
     <div id="section" class="image-container container-fluid">
