--- a/static/css/accounts.css
+++ b/static/css/accounts.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(../img/signup.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(../img/signupBackground.webp);
   }
   
   .logo {
