--- a/static/css/accounts.css
+++ b/static/css/accounts.css
@@ -1,5 +1,7 @@
 body {
     background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(../img/signupBackground.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   
   .logo {
