--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,6 +99,8 @@ body {
 .image-container {
     position: relative;
     background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(../img/background.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     height: 100vh;
     padding-top: 2rem;
