fixed forget password email service

--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,3 +1,4 @@
+{% autoescape off %}
 Hi there,
 
 Someone asked for a password reset for the email address {{ email }}.
@@ -17,3 +18,4 @@ disregard this email.
 Thanks,
 
 The Mohit Boards Team
+{% endautoescape %}
